k8s/vibank-back-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: vibank-back
spec:
  type: LoadBalancer
  ports:
  - port: 8080
    targetPort: 3000
  selector:
    app: vibank-back
